Fixed content jumping

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body {
   font-weight: 400;
   line-height: 1.37;
   color: rgba(0, 0, 0, 0.8);
+  overflow-y: scroll;
 }
 
 h1, h2, h3 {
